--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -43,7 +43,7 @@
   	<filter-class>com.njwb.filter.AuthorFilter</filter-class>
   	<init-param>
   		<param-name>notAuthor</param-name>
-  		<param-value>login.action,login.jsp,result.jsp,.js,.css,checkCode.action</param-value>
+  		<param-value>login.action,login.jsp,result.jsp,.js,.css,checkCode.action,el.jsp</param-value>
   	</init-param>
   </filter> 
   <filter-mapping>
